tests/miniJava/neg/000305_mutation.MiniJava
class java { public static void Main ( extends String [ ] java ) { { } } }
